--- a/style.css
+++ b/style.css
@@ -9,10 +9,10 @@
     --Dark-Grayish-Blue: hsl(210, 10%, 33%);
     --Grayish-Blue: hsl(201, 11%, 66%);
 
-    --h1-size: 1.8em;
-    --h2-size: 1.5em;
-    --h4-size: 1.2em;
-    --p-size: 1rem;
+    --h1-size: 2em;
+    --h2-size: 1.8em;
+    --h4-size: 1.5em;
+    --p-size: 1.2rem;
     --body-weight: 600;
     --p-weight: 400;
 }
@@ -20,15 +20,16 @@ body {
     font-family: 'Bai Jamjuree', sans-serif;
     text-align: center;
     font-weight: var(--body-weight);
-    line-height: 1.5em;
+    line-height: 2em;
     width: 100%;
+    word-spacing: .2rem;
 }
 .h1, .h2, .h4, .p {
     padding-inline: 2em;
 }
 .h1 {
     font-size: var(--h1-size);
-    line-height: 1em;
+    line-height: 2em;
 }
 .h2 {
     font-size: var(--h2-size);
@@ -36,8 +37,8 @@ body {
 .h4 {
     font-size: var(--h4-size);
 }
-.p {
-    /* padding: .5em 0; */
+.p, .two-p, .six-p {
+    padding: .5em 0;
     font-weight: var(--p-weight);
     color: var(--Grayish-Blue);
 }
@@ -51,7 +52,8 @@ body {
     background-size: cover;
 }
 .header-logo {
-    margin: 5% 0;
+    margin-top: 8%;
+    margin-bottom: 5%;
     width: 10%;
     min-width: 100px;
     height: auto;
@@ -87,7 +89,7 @@ body {
     margin-top: 2em;
 }
 .footer {
-    background-color: var(--Grayish-Blue);
+    background-color: #f7f3f3;
 }
 .footer-a {
     color: var(--Dark-Grayish-Blue);
@@ -126,8 +128,37 @@ body {
     .btns {
         flex-direction: row;
     }
-    .section-two, .section-six {
+    .section-two, .section-six, .section-seven {
         display: flex;
         flex-direction: row;
+    }
+    .section-seven {
+        justify-content: space-between;
+        padding-inline: 2%;
+    }
+    .p {
+        margin-inline: 30%;
+    }
+    .two-left {
+        margin-left: -10%;
+        width: 60%;
+    }
+    .two-right {
+        padding: 0 5% 0 5%;
+        width: 40%;
+    }
+    .two-p, .two-h4 {
+        text-align: left;
+        padding: 0;
+    }
+    .four-img {
+        width: 60%;
+    }
+    .section-six {
+        padding-inline: 3%;
+        display: table;
+    }
+    .six {
+        display: table-cell;
     }
 }
